gcc/testsuite/gdc.test/fail_compilation/imports/fail10277.d
module imports.fail10277;

class TypeInfo { }
class TypeInfo_Class { }
class TypeInfo_Interface { }
class TypeInfo_Struct { }
class TypeInfo_Typedef { }
class TypeInfo_Pointer { }
class TypeInfo_Array { }
class TypeInfo_AssociativeArray { }
class TypeInfo_Enum { }
class TypeInfo_Function { }
class TypeInfo_Delegate { }
class TypeInfo_Tuple { }
class TypeInfo_Const { }
class TypeInfo_Invariant { }
class TypeInfo_Shared { }
class TypeInfo_Inout { }
class TypeInfo_Vector { }
class Object { }
class Throwable { }
class Exception { }
class Error { }
